# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# messages.proto
cc_proto_library(
    name = "messages_cc_proto",
    visibility = ["//drivacy:__subpackages__"],
    deps = [":messages_proto"],
)

proto_library(
    name = "messages_proto",
    srcs = [
        "messages.proto",
    ],
)

# config.proto
cc_proto_library(
    name = "config_cc_proto",
    visibility = ["//drivacy:__subpackages__"],
    deps = [":config_proto"],
)

proto_library(
    name = "config_proto",
    srcs = [
        "config.proto",
    ],
)

# batch.h
cc_library(
    name = "batch",
    srcs = [],
    hdrs = [
        "batch.h",
    ],
    deps = [
      ":types",
      "//drivacy:protocol:protocol",
    ]
    visibility = ["//drivacy:__subpackages__"],
)

# table.h
cc_library(
    name = "types",
    srcs = [],
    hdrs = [
        "types.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
)
