# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# config.proto
cc_proto_library(
    name = "config_cc_proto",
    visibility = ["//drivacy:__subpackages__"],
    deps = [":config_proto"],
)

proto_library(
    name = "config_proto",
    srcs = [
        "config.proto",
    ],
)

# types.h|cc
cc_library(
    name = "types_definitions",
    srcs = [],
    hdrs = [
        "types.h",
    ],
    deps = [],
    visibility = ["//drivacy:__subpackages__"],
)
cc_library(
    name = "types",
    srcs = [
        "types.cc"
    ],
    deps = [
        "//drivacy/types:types_definitions",
        "//drivacy/primitives:crypto",
    ],
    visibility = ["//drivacy:__subpackages__"],
)
