# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "status",
    srcs = [],
    hdrs = [
        "status.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
    ],
)
