# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "file",
    srcs = [
        "file.cc",
    ],
    hdrs = [
        "file.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf_headers",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/util:status",
        "//third_party:rapidjson"
    ],
)

cc_library(
    name = "status",
    srcs = [],
    hdrs = [
        "status.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
    ],
)
