load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
        "@checklist//driver",
        "@checklist//pir",
        "@checklist//updatable",
    ],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
