load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "sealpir",
    srcs = [
        "main.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/strings",
        "@SealPIR//:sealpir",
    ],
)
