# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "client",
    srcs = [
        "client.cc"
    ],
    hdrs = [
        "client.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "//drivacy/io:socket",
        "//drivacy/protocol/online:client",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
    ],
)

cc_library(
    name = "party",
    srcs = [
        "backend_party.cc",
        "head_party.cc",
        "party.cc",
    ],
    hdrs = [
        "backend_party.h",
        "head_party.h",
        "party.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "//drivacy/io:socket",
        "//drivacy/io:listener",
        "//drivacy/protocol/online:protocol",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
    ],
)
