# Copyright 2020 multiparty.org
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("many_tests.bzl", "many_tests")

cc_binary(
    name = "shuffle",
    srcs = [
        "shuffle.cc",
    ],
    deps = [
        "@com_google_absl//absl/status",
        "//drivacy/protocol:protocol",
        "//drivacy/types:types",
    ],
)

# Shuffle tests
many_tests("//drivacy/protocol/test:shuffle", [
    (100, ),
    (3, 3, 3),
    (50, 50, 50),
    (100, 50, 141),
    (20, 10),
    (1010, 800, 1131, 1001, 1000, 600, 812, 1099, 965, 1000),
])
